fixed spacing between bio and tracks

--- a/css/main.css
+++ b/css/main.css
@@ -26,18 +26,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #artistBio {
-	margin-top: 2em;
 	margin-bottom: 1em;
 	padding-bottom: 2em;
 }
 
 #artistBio .container {
-	margin-bottom: 2em;
 	border-radius: 10px;
 }
 
 #artistBio .container > div {
-	margin-top: 2em;
 	margin-bottom: 2em;
 	background-color: #292828;
 	padding: 1em;
@@ -50,7 +47,7 @@ h1, h2, h3, h4, h5, h6 {
     height: 500px; 
     min-width: 310px; 
     max-width: 800px; 
-    margin: 0 auto; 
+    margin: 0 auto;
 }
 
 #pickCountry, #button, #play {
@@ -116,8 +113,12 @@ a {
   		margin-bottom: 3em;
   	}
 
-	#play, #song {
-		margin-left: auto;
+  	#songs {
+  		margin-left: auto;
+  	}
+
+	#play {
+		margin-left: 20px;
 		margin-right: auto;
 	}
 }
